@@ -1,3 +1,6 @@
+* Mon Aug 07 2023 Steven Pritchard <steve@sicura.us> - 6.4.0
+- Add AlmaLinux 8 support
+
 * Mon Jul 17 2023 Chris Tessmer <chris.tessmer@onyxpoint.com> - 6.3.0
 - Add RockyLinux 8 support
 
